--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.thymeleaf.dialect=org.thymeleaf.extras.springsecurity4.dialect.SpringSecu
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://localhost:3306/medicaldb   
+spring.datasource.url = jdbc:mysql://localhost:3306/medicaldb?useSSL=false   
 spring.datasource.username = admin
 spring.datasource.password = p@ssw0rd
 spring.datasource.testWhileIdle = true
