--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.thymeleaf.dialect=org.thymeleaf.extras.springsecurity4.dialect.SpringSecu
 # ===============================
 # = DATA SOURCE
 # ===============================
-spring.datasource.url = jdbc:mysql://localhost:3306/medicaldb?useSSL=false   
+spring.datasource.url = jdbc:mysql://localhost:3306/medicaldb?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username = admin
 spring.datasource.password = p@ssw0rd
 spring.datasource.testWhileIdle = true
@@ -27,7 +27,7 @@ spring.datasource.log-validation-errors=true
 # = JPA / HIBERNATE
 # ===============================
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
